{
    "name": "PlayerController",
    "maps": [
        {
            "name": "GamePlay",
            "id": "8a430202-18af-44f8-a351-d067eb2a629c",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "7f198511-cad9-420c-9276-78635784d58e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cursor",
                    "type": "PassThrough",
                    "id": "e139b82f-c5de-4af3-8ea3-bd1c4bce77d3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "12ff638c-9ea6-4dcc-a153-91ea8f9c4125",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RunPressed",
                    "type": "Button",
                    "id": "8651c670-d437-4510-a652-50b4d867833b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DashPressed",
                    "type": "Button",
                    "id": "4ca03ae0-4c65-436f-a408-141934fb64ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FirePressed",
                    "type": "Button",
                    "id": "86252a4f-acc0-4dff-941a-c4c43e75fb77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "07fb408c-67d1-453d-b76e-26428ca755a0",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cca54d83-4e44-4b58-8c00-fcdf303818fa",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b55d55ee-a9ca-468c-9137-50feaed9cda2",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfe3cc44-94c4-4f96-8641-86e3d3d5566f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "RunPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d293e627-7b0d-41e0-9382-7d510bd08158",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "DashPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43dc4122-42d6-4488-9f4f-4a664154a480",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "FirePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SecondPlayer",
            "id": "58061a92-4726-4fdb-8612-5924887d3e2c",
            "actions": [
                {
                    "name": "SMove",
                    "type": "PassThrough",
                    "id": "a8e0dab0-6bcf-4373-af1f-8b448c82b7a4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "SCursor",
                    "type": "PassThrough",
                    "id": "612f250f-13f6-42d3-b0a3-37cee5e3653d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "9e6ef431-32f1-46af-9c43-bac9e3c182c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "25ed17aa-35ef-481a-b861-378c9b18da09",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "SMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab37a6ef-ce71-4536-a477-3290d4319c3b",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b752e89b-6368-42bb-8ce1-eb0c7fe8d6b8",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button7",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}